Fixed integration test now it works as it should have been !